# seabiscuit

./: CMakeLists.txt  README.md  Seabiscuit.qmlproject  Seabiscuit.qmlproject.qtds  main.qml  qmlmodules  seabiscuit2.qmlproject  seabiscuit2.qmlproject.qtds  systemmetrics.cpp  systemmetrics.h
content/: App.qml  CMakeLists.txt  Screen01.ui.qml  canbus.cpp  canbus.h
imports/: CMakeLists.txt
imports/Seabiscuit/: CMakeLists.txt  qmldir
imports/Seabiscuit/designer/: plugin.metainfo
imports/seabiscuit2/: CMakeLists.txt  qmldir
imports/seabiscuit2/designer/: plugin.metainfo
src/: import_qml_plugins.h  main.cpp
src/canbus/: vectorcanbus.cpp  vectorcanbus.hpp
